--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,11 @@
     <title>虛擬健身教練 | Virtual Fitness Coach</title>
     <meta name="description" content="客製化個人健身課表，隨時隨地開始訓練" />
     
+    <!-- Favicon & App Icons -->
+    <link rel="icon" type="image/png" href="/logo.png" />
+    <link rel="apple-touch-icon" href="/logo.png" />
+    <meta name="theme-color" content="#394508" />
+    
     <!-- Google Fonts: Noto Sans TC (繁體中文) & Inter (英文數字) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
